# xgit

./: .gitignore  README.md  pyproject.toml  setup.py
sgit/: __main__.py  utils.py
xgit/: __main__.py
