[tool.poetry]
name = "sgit"
version = "0.1.0"
description = "An opinionated command line tools to make your life easier with Git and Gitignore"
authors = ["patarapolw <patarapolw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
sgit = 'sgit.__main__:main'
